Add Update Definition Command
Adding a command for updating definitions. It's available as an RPC and
via the CLI under the definitions subcommand.
